Bug 469567 - Emission dark icon when using Breeze dark theme
Summary: Emission dark icon when using Breeze dark theme
Status: RESOLVED FIXED
Alias: None
Product: kasts
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: bart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-10 09:17 UTC by machaquiro
Modified: 2023-05-10 13:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example image with bug (382.92 KB, image/png)
2023-05-10 09:17 UTC, machaquiro
Details

Note You need to log in before you can comment on or make changes to this bug.
Description machaquiro 2023-05-10 09:17:41 UTC
Created attachment 158824 [details]
Example image with bug

SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Change KDE Plasma to Breeze Dark on Preferences first page
2. Open Kasts
3. Click on any episode and see the emission button is black instead of white

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Manjaro KDE
(available in About System)
KDE Plasma Version: 5.27.5
KDE Frameworks Version: 5.105.0
Qt Version: 5.15.9

ADDITIONAL INFORMATION
Comment 1 bart 2023-05-10 12:34:44 UTC
Git commit f69366f6fda1c220d31ea71aab78e7db1846356a by Bart De Vries.
Committed on 10/05/2023 at 12:30.
Pushed by bdevries into branch 'master'.

Load custom icons through fallbackSearchPaths

M  +1    -1    .reuse/dep5
M  +1    -1    CMakeLists.txt
R  +1    -1    icons/media-playback-cloud.svg [from: icons/media-playback-start-cloud.svg - 094% similarity]
M  +1    -0    src/CMakeLists.txt
M  +2    -0    src/main.cpp
M  +1    -2    src/qml/ChapterListDelegate.qml
M  +1    -1    src/qml/EntryPage.qml
M  +1    -1    src/qml/GenericEntryDelegate.qml
M  +1    -1    src/qml/GenericEntryListView.qml
M  +1    -1    src/resources.qrc

https://invent.kde.org/multimedia/kasts/commit/f69366f6fda1c220d31ea71aab78e7db1846356a
Comment 2 bart 2023-05-10 12:36:54 UTC
Thanks for reporting this.
It should be solved now (on the master branch and queued for the next release).

It might be necessary to remove the kde icon cache file (once the correction has been released).  This can be done by removing `~/.cache/icon-cache.kcache`.
Comment 3 bart 2023-05-10 13:54:18 UTC
Git commit 5ac9b0fdeb0b98abcb063199f78600b2ead3f241 by Bart De Vries.
Committed on 10/05/2023 at 13:52.
Pushed by bdevries into branch 'release/23.04'.

Load custom icons through fallbackSearchPaths

This fixes automatic icon recoloring for dark themes.

(cherry-picked from commit f69366f6fda1c220d31ea71aab78e7db1846356a)

M  +1    -1    .reuse/dep5
M  +1    -1    CMakeLists.txt
R  +1    -1    icons/media-playback-cloud.svg [from: icons/media-playback-start-cloud.svg - 094% similarity]
M  +1    -0    src/CMakeLists.txt
M  +2    -0    src/main.cpp
M  +1    -2    src/qml/ChapterListDelegate.qml
M  +1    -1    src/qml/EntryPage.qml
M  +1    -1    src/qml/GenericEntryDelegate.qml
M  +1    -1    src/qml/GenericEntryListView.qml
M  +1    -1    src/resources.qrc

https://invent.kde.org/multimedia/kasts/commit/5ac9b0fdeb0b98abcb063199f78600b2ead3f241