Load custom icons through fallbackSearchPaths

BUG: 469567